@@ -1,19 +1,13 @@
 package aiss.GitHubMiner.services;
 
-import aiss.GitHubMiner.auxiliary.Auth;
-import aiss.GitHubMiner.models.commitsModels.Commit;
-import aiss.GitHubMiner.models.projectsModels.Projects;
+import aiss.GitHubMiner.models.projectsModels.Project;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 
 @Service
@@ -22,29 +16,27 @@ public class ProjectService {
     @Autowired
     RestTemplate restTemplate;
 
-    String baseUri = "https://api.github.com/";
+    String baseUriOne = "https://api.github.com/repos/";
+    String baseUriAll = "https://api.github.com/orgs/";
 
-    public Projects getProject (String projectId, String token){
-        HttpEntity<?> request = Auth.buildHeader(token);
-        ResponseEntity<Projects> response = restTemplate.exchange(
-                baseUri + "projects/" + projectId,
-                HttpMethod.GET, request, Projects.class);
-        return response.getBody();
+    public Project getProject (String owner, String repoName){
+        Project project = restTemplate.getForObject(
+                baseUriOne + owner + "/" + repoName,
+                Project.class);
+        return project;
     }
 
-    public List<Projects> getAllProjects (String owner, String repo, String token){
-        HttpEntity<?> request = Auth.buildHeader(token);
-        ResponseEntity<Projects[]> response = restTemplate.exchange(
-                baseUri + "repos/" + owner + "/" + repo + "/projects",
-                HttpMethod.GET, request, Projects[].class);
-        return Arrays.stream(response.getBody()).toList();
+    public List<Project> getAllProjects(String org){
+        Project[] projects = restTemplate.getForObject(
+                baseUriAll + org + "/repos",
+                Project[].class);
+        return Arrays.stream(projects).toList();
     }
 
-    public List<Projects> getOrgProjects (String org){
-        Projects[] projectsArray = restTemplate
-                .getForObject(baseUri + "orgs/" + org + "/projects", Projects[].class);
-        return Arrays.stream(projectsArray).toList();
+    public List<Project> getProjectsPagination(String org, Integer maxPages) {
+        int projectsPerPage = 20;
+        List<Project> allProjects = getAllProjects(org);
+        return allProjects.stream().limit(maxPages * projectsPerPage).collect(Collectors.toList());
     }
 
 }
-
